--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,16 @@
 .header {
   height: 74px;
   background-color: #ffffff;
+  display: flex;
+  align-items: center;
+
+  &__title {
+    width: 233px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .main {
@@ -17,4 +27,35 @@
 .footer {
   height: 50px;
   background-color: #000000cc;
+  display: flex;
+  color: #ffffff;
+  border-top: 1px solid #ffffff33;
+  font-size: 12px;
+
+  &__left {
+    display: flex;
+    align-items: center;
+    margin-left: 32px;
+
+    &--terms-of-use {
+      color: #ffffff;
+      text-decoration: none;
+    }
+
+    &--privacy-policy {
+      margin-left: 24px;
+      color: #ffffff;
+      text-decoration: none;
+    }
+  }
+
+  &__left-icon {
+    margin-left: 8px;
+  }
+
+  &__right {
+    margin-left: auto;
+    margin-right: 32px;
+    align-items: center;
+  }
 }
