グラフのフレームを作成

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,18 @@
   }
 }
 
+.contents {
+  display: flex;
+}
+
+.graph-box {
+  width: 1457px;
+  height: 780px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer {
   height: 50px;
   background-color: #000000cc;
