--- a/src/components/Control.scss
+++ b/src/components/Control.scss
@@ -2,17 +2,12 @@
   width: 359px;
   height: 780px;
   background-color: #f0f3f5;
-  margin: 40px 40px 0 auto;
+  margin: 40px 40px 40px auto;
   border-radius: 4px;
   position: relative;
 
-  &__header {
-    margin-top: 24px;
-  }
-
   &__title {
     margin: 24px;
-    padding-top: 24px;
     font-size: 16px;
   }
 
